QR suggestions - fix padding on mobile devices

--- a/public/style.css
+++ b/public/style.css
@@ -476,7 +476,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
         overflow-x: hidden;
         position:relative;
     }
-    h1,h2,h3,h4,h5,h6,p{
+    h1,h2,h3,h4,h5,h6,p,.pad-text{
         padding-left:10px!important; 
         padding-right:10px!important; 
     }
